# chess

./: .gitignore  CMakeLists.txt
epd/: bkt.txt  see.txt
src/: bitboard.hpp  bitboards.hpp  common.hpp  dirty_piece.hpp  evaluator.hpp  evaluator2.hpp  hashes.hpp  history.hpp  killer.hpp  main.cpp  move.hpp  move_picker.hpp  node.hpp  piece.hpp  position.cpp  position.hpp  score.hpp  searcher.hpp  side.hpp  square.hpp  transposition.hpp  uci.hpp
src/nnue/: accumulator.hpp  affine_tranform.hpp  common.hpp  features.hpp  index.hpp  mul_clipped_relu.hpp  network.hpp  nnue.hpp
test/: blocking_input.hpp  test.cpp  test_bitboard.hpp  test_bitboards.hpp  test_evaluator.hpp  test_history.hpp  test_killer.hpp  test_move.hpp  test_move_picker.hpp  test_node.hpp  test_perft.hpp  test_perft_2.hpp  test_piece.hpp  test_position.hpp  test_searcher.hpp  test_side.hpp  test_square.hpp  test_transposition.hpp  ut.hpp
test/nnue/: test_affine_tranform.hpp  test_clipped_relu.hpp  test_mul_clipped_relu.hpp  test_nnue.hpp  test_sqr_clipped_relu.hpp
